# wallpaper-widget-mode-test

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  win10log.md
docs/: windows-wallpaper-widget-implementation-notes.md
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: desktop_layer.rs  input_forwarder.rs  lib.rs  main.rs
