[package]
name = "wallpaper-widget-mode-test"
version = "0.1.0"
description = "Tauri test app for attached and detached wallpaper widget modes."
authors = ["local"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wallpaper_widget_mode_test_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
] }
